--- a/devtool.html
+++ b/devtool.html
@@ -2,6 +2,6 @@
 <html lang="en">
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/devtool.tsx"></script>
+    <script type="module" src="/src/devtool.ts"></script>
   </body>
 </html>
